--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,5 +12,5 @@ jobs:
       shell: pwsh
       run: |
         $ExcludeList = @('README.md', 'publish.yml')
-        Import-Module -Name kubetools.psd1
+        Import-Module -Name ${{ github.workspace}}/kubetools.psd1
         Publish-Module -Name kubetools -NuGetApiKey ${{ secrets.POWERSHELL_GALLERY_APIKEY }} -Exclude $ExcludeList
