--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,7 @@ jobs:
       name: Publish Module
       shell: pwsh
       run: |
+        Get-ChildItem
         $ExcludeList = @('README.md', 'publish.yml')
         Import-Module -Name ${{ github.workspace}}/kubetools.psd1
         Publish-Module -Name kubetools -NuGetApiKey ${{ secrets.POWERSHELL_GALLERY_APIKEY }} -Exclude $ExcludeList
